--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   dev:
-    image: souny007/cd-ci-react:0.0.5
+    image: souny007/cd-ci-react:latest
     restart: always
     ports:
       - 8080:80
