--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,7 @@ jobs:
           git config user.email "<>"
 
       - name: Dependecies
-        run: |
-          npm ci
+        run: npm ci
 
       - name: Build
         run: npm run build
