--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,13 +40,25 @@ jobs:
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-      - name: Build Docker image
-        # run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:${{steps.version.outputs.tag}}
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:latest
+      # - name: Build Docker image
+      #   # run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:${{steps.version.outputs.tag}}
+      #   run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:latest
 
-      - name: Push to Docker Hub
-        # run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:${{steps.version.outputs.tag}}
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:latest
+      # - name: Push to Docker Hub
+      #   # run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:${{steps.version.outputs.tag}}
+      #   run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        id: build
+        uses: docker/build-push-action@v2
+        continue-on-error: true
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cd-ci-react:latest
 
       - name: Call Portainer Webhook to Update Service
         id: callportainerwebhook
