--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,3 +82,17 @@ jobs:
               echo "SUCCESS"
               exit 0
           fi
+
+      - name: Sent LINE Noti - Success
+        if: steps.build.outcome == 'success' && steps.callportainerwebhook.outcome == 'success'
+        uses: snow-actions/line-notify@v1.0.0
+        with:
+          access_token: ${{ secrets.LINE_ACCESS_TOKEN }}
+          message: "👏 Success | build and deploy มีการอัปเดตเรื่อง ${{ github.event.commits[0].message }} ของ ${{ github.event.commits[0].author.name }} เสร็จแล้ว รอโปรแกรม Compile 1 นาที แล้วทดสอบได้เลย 😎"
+
+      - name: Sent LINE Noti - Failure
+        if: steps.build.outcome != 'success' || steps.callportainerwebhook.outcome != 'success'
+        uses: snow-actions/line-notify@v1.0.0
+        with:
+          access_token: ${{ secrets.LINE_ACCESS_TOKEN }}
+          message: "❌❌❌  Failure - Build Error เรื่อง ${{ github.event.commits[0].message }} ของ ${{ github.event.commits[0].author.name }} โปรดตรวจสอบ"
